--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -1,7 +1,22 @@
-.complete {
-  background: -webkit-linear-gradient(to right, #e65c00, #f9d423); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #e65c00, #f9d423); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+.item {
+  border-radius: 1rem;
+  border: 1px solid grey;
+  margin: 1rem;
+  padding: 1rem;
+  flex: 1 0 30%;
+
+  @media (max-width: 750px) {
+    flex-basis: 45%;
+  }
+
+  @media (max-width: 600px) {
+    flex-basis: 90%;
+  }
+
+  &--complete {
+    background: -webkit-linear-gradient(to right, #e65c00, #f9d423); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #e65c00, #f9d423); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      
     h1 {
       text-decoration: line-through;
       opacity: 0.6;
@@ -9,55 +24,30 @@
     }
   }
 
-  .checkbox {
-    color: black;
-    background: white;
-  }
-
-  .item {
-    border-radius: 1rem;
-    border: 1px solid grey;
-    margin: 1rem;
-    padding: 1rem;
-    float: left;
-    width: 30.65%;
-  }
-
-  .itemContainer {
+  &__container {
     align-items: center;
     margin: 1rem 0;
     display: flex;
   }
 
-.checkbox {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  margin-right: 5px;
-  cursor: pointer;
-  font-size: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color .2s ease-in-out;
-  border: 1px solid black;
+  &__checkbox {
+    color: black;
+    background: white;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 5px;
+    cursor: pointer;
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color .2s ease-in-out;
+    border: 1px solid black;
 
-  &:hover {
+    &:hover {
       background: rgba(27, 100, 129, 0.521);
       border: 1px solid rgba(53, 27, 168, 0);
-    
-  }
-}
-
-
- @media all and (max-width: 600px) {
-  .item {
-    width: 96%;
- }
-}
-
-@media all and (max-width: 750px) {
-  .item {
-    width: 46.5%;
+    }
   }
 }
